--- a/jysInfo/src/main/resources/templates/MajorInfo.html
+++ b/jysInfo/src/main/resources/templates/MajorInfo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
@@ -18,8 +18,8 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/majorView.css" rel="stylesheet">
-    <link href="css/majorView2.css" rel="stylesheet">
+    <link th:href="@{/css/majorView.css}" rel="stylesheet">
+    <link th:href="@{/css/majorView2.css}" rel="stylesheet">
 
 
         <!-- Favicon-->
