--- a/jysInfo/src/main/resources/templates/MajorInfo.html
+++ b/jysInfo/src/main/resources/templates/MajorInfo.html
@@ -19,7 +19,7 @@
 
     <!-- Custom styles for this template-->
     <link th:href="@{/css/majorView.css}" rel="stylesheet">
-    <link th:href="@{/css/majorView2.css}" rel="stylesheet">
+    <link th:href="@{/css/navbar.css}" rel="stylesheet">
 
 
         <!-- Favicon-->
@@ -44,17 +44,17 @@
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-lg-5">
-            <a class="navbar-brand" href="#!">LOGO</a>
+            <a class="navbar-brand" href="/">LOGO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars ms-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">진로상담</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">학과정보</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#team">대학정보</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">기업정보</a></li>
+                    <li class="nav-item"><a class="nav-link" style="text-decoration: none;" href="">진로상담</a></li>
+                    <li class="nav-item"><a class="nav-link" style="text-decoration: none;" href="majorInfo">학과정보</a></li>
+                    <li class="nav-item"><a class="nav-link" style="text-decoration: none;" href="universityInfo">대학정보</a></li>
+                    <li class="nav-item"><a class="nav-link" style="text-decoration: none;" href="companyInfo">기업정보</a></li>
                 </ul>
             </div>
         </div>
