--- a/jysInfo/src/main/resources/templates/Menu.html
+++ b/jysInfo/src/main/resources/templates/Menu.html
@@ -20,17 +20,17 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-lg-5">
-                <a class="navbar-brand" href="#!">LOGO</a>
+                <a class="navbar-brand" href="/">LOGO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">진로상담</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">학과정보</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">대학정보</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">기업정보</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">진로상담</a></li>
+                        <li class="nav-item"><a class="nav-link" href="majorInfo">학과정보</a></li>
+                        <li class="nav-item"><a class="nav-link" href="universityInfo">대학정보</a></li>
+                        <li class="nav-item"><a class="nav-link" href="companyInfo">기업정보</a></li>
                     </ul>
                 </div>
             </div>
