--- a/jysInfo/src/main/resources/templates/UniversityInfo.html
+++ b/jysInfo/src/main/resources/templates/UniversityInfo.html
@@ -35,7 +35,8 @@
                         // 서버 응답 성공 시 실행되는 콜백 함수
                         // response 변수에 서버에서 받은 데이터가 담겨 있음
                         // 원하는 작업 수행
-                        console.log(response)
+                        console.log(response["pageData"])
+                        console.log(response["columnData"])
                     },
                     error: function(xhr, status, error) {
                         // 서버 요청 실패 시 실행되는 콜백 함수
