--- a/jysInfo/src/main/resources/templates/UniversityInfo.html
+++ b/jysInfo/src/main/resources/templates/UniversityInfo.html
@@ -19,33 +19,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script>
-            $(document).ready(function(){
-                $('[data-toggle="tooltip"]').tooltip();
-                let data = {
-                    page: 1
-                }
-                // jQuery를 이용한 AJAX 요청
-                $.ajax({
-                    url: '/universityInfo',  // 요청할 URL
-                    type: 'post',      // 요청 타입 (GET, POST 등)
-                    dataType: 'json', // 응답 데이터 타입 (JSON, XML 등)
-                    data: data,
-                    success: function(response) {
-                        // 서버 응답 성공 시 실행되는 콜백 함수
-                        // response 변수에 서버에서 받은 데이터가 담겨 있음
-                        // 원하는 작업 수행
-                        console.log(response["pageData"])
-                        console.log(response["columnData"])
-                    },
-                    error: function(xhr, status, error) {
-                        // 서버 요청 실패 시 실행되는 콜백 함수
-                        // 오류 처리 등을 수행
-                    }
-                });
-
-            });
-            </script>
 </head>
 <body>
 <!-- Responsive navbar-->
@@ -84,139 +57,16 @@
             <table class="table table-striped table-hover table-bordered">
                 <thead>
                 <tr>
-                    <th>#</th>
-                    <th>Name <i class="fa fa-sort"></i></th>
-                    <th>Address</th>
-                    <th>City <i class="fa fa-sort"></i></th>
-                    <th>Pin Code</th>
-                    <th>Country <i class="fa fa-sort"></i></th>
+                    <!-- 기준년도 학교명 전형유형명 전형대분류 전형중분류 전형소분류 -->
+                    <th>기준년도 </th>
+                    <th>학교명 <i class="fa fa-sort"></i></th>
+                    <th>전형유형명</th>
+                    <th>전형대분류 <i class="fa fa-sort"></i></th>
+                    <th>전형중분류 </th>
+                    <th>전형소분류 <i class="fa fa-sort"></i></th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Thomas Hardy</td>
-                    <td>89 Chiaroscuro Rd.</td>
-                    <td>Portland</td>
-                    <td>97219</td>
-                    <td>USA</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Maria Anders</td>
-                    <td>Obere Str. 57</td>
-                    <td>Berlin</td>
-                    <td>12209</td>
-                    <td>Germany</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Fran Wilson</td>
-                    <td>C/ Araquil, 67</td>
-                    <td>Madrid</td>
-                    <td>28023</td>
-                    <td>Spain</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Dominique Perrier</td>
-                    <td>25, rue Lauriston</td>
-                    <td>Paris</td>
-                    <td>75016</td>
-                    <td>France</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-                <tr>
-                    <td>7</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-                <tr>
-                    <td>8</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-                <tr>
-                    <td>9</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-                <tr>
-                    <td>10</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-                <tr>
-                    <td>11</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-
-                <tr>
-                    <td>12</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-
-                <tr>
-                    <td>13</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-
-                <tr>
-                    <td>14</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
-
-                <tr>
-                    <td>15</td>
-                    <td>Martin Blank</td>
-                    <td>Via Monte Bianco 34</td>
-                    <td>Turin</td>
-                    <td>10100</td>
-                    <td>Italy</td>
-                </tr>
                 </tbody>
             </table>
             <div class="clearfix">
@@ -236,6 +86,64 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+
+    function toDOM(row) {
+        var tr = '';
+        tr += '<tr>';
+        tr += '  <td>' + row["A"] + '</td>';
+        tr += '  <td>' + row["D"] + '</td>';
+        tr += '  <td>' + row["F"] + '</td>';
+        tr += '  <td>' + row["G"] + '</td>';
+        tr += '  <td>' + row["H"] + '</td>';
+        tr += '  <td>' + row["I"] + '</td>';
+        tr += '</tr>';
+        return tr;
+      }
+    function ajax() {
+        let data = {
+            page: 1
+        }
+        // jQuery를 이용한 AJAX 요청
+        $.ajax({
+            url: '/universityInfo',  // 요청할 URL
+            type: 'post',      // 요청 타입 (GET, POST 등)
+            dataType: 'json', // 응답 데이터 타입 (JSON, XML 등)
+            data: data,
+            success: function(response) {
+                // 서버 응답 성공 시 실행되는 콜백 함수
+                // response 변수에 서버에서 받은 데이터가 담겨 있음
+                // 원하는 작업 수행
+                console.log(response["pageData"])
+                console.log(response["columnData"])
+
+                var pageData = response['pageData']
+                await
+                renderTable('table', pageData)
+            },
+            error: function(xhr, status, error) {
+                // 서버 요청 실패 시 실행되는 콜백 함수
+                // 오류 처리 등을 수행
+            }
+        });
+    }
+    function renderTable(id, pageData){
+        var trList = '';
+        console.log(pageData)
+        for (i = 0; i < pageData.length; i++) {
+            trList += toDOM(pageData[i]);
+        }
+        document.querySelector('#' + id + ' tbody').innerHTML = trList;
+    }
+
+    window.onload = function () {
+        ajax();
+    };
+</script>
 
 <!-- Footer-->
 <footer class="py-5 bg-dark">
