--- a/jysInfo/src/main/resources/templates/UniversityInfo.html
+++ b/jysInfo/src/main/resources/templates/UniversityInfo.html
@@ -13,14 +13,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.5/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
 </head>
-<body>
+<body style="background-color: white;">
 <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-lg-5">
@@ -41,6 +41,7 @@
 </nav>
 
 <div class="container-xl">
+
     <div class="table-responsive">
         <div class="table-wrapper">
             <div class="table-title">
@@ -54,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <table class="table table-striped table-hover table-bordered">
+            <table id="table" class="table table-striped table-hover table-bordered">
                 <thead>
                 <tr>
                     <!-- 기준년도 학교명 전형유형명 전형대분류 전형중분류 전형소분류 -->
@@ -122,7 +123,6 @@
                 console.log(response["columnData"])
 
                 var pageData = response['pageData']
-                await
                 renderTable('table', pageData)
             },
             error: function(xhr, status, error) {
@@ -137,6 +137,7 @@
         for (i = 0; i < pageData.length; i++) {
             trList += toDOM(pageData[i]);
         }
+        console.log(trList);
         document.querySelector('#' + id + ' tbody').innerHTML = trList;
     }
 
