--- a/jysInfo/src/main/resources/templates/UniversityInfo.html
+++ b/jysInfo/src/main/resources/templates/UniversityInfo.html
@@ -30,57 +30,55 @@
         </div>
     </div>
 </nav>
-<div id="app">
-    <table>
-        <caption></caption>
-        <thead>
-        <tr>
-            <th>기준년도 </th>
-            <th>학교명</th>
-            <th>전형유형명</th>
-            <th>전형대분류</th>
-            <th>전형중분류</th>
-            <th>전형소분류</th>
-        </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
 
-    <div class="paging">
-        <select id="countPerPage">
-            <option value="10">10</option>
-            <option value="30">30</option>
-            <option value="50">50</option>
-        </select>
-        <div style="display: flex; align-items: center;">
-            <!-- Fontawesome Icon -->
-            <i class="fa-solid fa-angles-left" id="first_page"></i>
-            <i class="fa-solid fa-angle-left" id="prev_page"></i>
-            <!--  -->
-            <div class="pages">
-                <span class="active">1</span>
-                <span>2</span>
-                <span>3</span>
-                <span>4</span>
-                <span>5</span>
+<section class="ftco-section" style="padding:1rem;">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8"><h2>Customer <b>Details</b></h2></div>
+            <div class="col-sm-4">
+                <div class="search-box">
+                    <i class="material-icons">&#xE8B6;</i>
+                    <input type="text" class="form-control" id="searchInput" placeholder="Search&hellip;">
+                </div>
             </div>
-            <!-- Fontawesome Icon -->
-            <i class="fa-solid fa-angle-right" id="next_page"></i>
-            <i class="fa-solid fa-angles-right" id="last_page"></i>
         </div>
-        <div>
-            Total: <span class="total">0</span>
+        <div class="row">
+            <div class="col-md-12">
+                <!-- page count -->
+                <div id="page_info"></div>
+                <!-- board -->
+                <div class="table-wrap">
+                    <table class="table">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>기준년도 </th>
+                            <th>설립구분명</th>
+                            <th>학교명</th>
+                            <th>전형대분류</th>
+                            <th>전형중분류</th>
+                            <th>전형소분류</th>
+                        </tr>
+                        </thead>
+                        <tbody id="html_list">
+                        </tbody>
+                    </table>
+                    <!-- pagination -->
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center" id="paging">
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-
+</section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
 <!-- Core theme JS-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script th:src="@{/js/jquery.blockUI.js}"></script>
+<!--<script th:src="@{/js/jquery.blockUI.js}"></script>-->
 <script th:src="@{/js/pagination.js}"></script>
 </body>
 </html>
