--- a/jysInfo/src/main/resources/templates/UniversityInfo.html
+++ b/jysInfo/src/main/resources/templates/UniversityInfo.html
@@ -51,9 +51,11 @@
                     <table class="table">
                         <thead class="thead-dark">
                         <tr>
-                            <th>기준년도 </th>
+                            <th>#</th>
+                            <th>기준년도</th>
                             <th>설립구분명</th>
                             <th>학교명</th>
+                            <th>전형유형명</th>
                             <th>전형대분류</th>
                             <th>전형중분류</th>
                             <th>전형소분류</th>
