--- a/jysInfo/src/main/resources/templates/UniversityInfo.html
+++ b/jysInfo/src/main/resources/templates/UniversityInfo.html
@@ -11,6 +11,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link th:href="@{/css/style.css}" rel="stylesheet">
     <link th:href="@{/css/universityView.css}" rel="stylesheet">
+    <style>
+        .th {
+            padding: 15px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body style="background-color: white;">
 <!-- Responsive navbar-->
