--- a/jysInfo/src/main/resources/static/css/style.css
+++ b/jysInfo/src/main/resources/static/css/style.css
@@ -1335,7 +1335,7 @@ pre {
     vertical-align: top;
     border-top: 1px solid #dee2e6; }
   .table thead th {
-    vertical-align: bottom;
+    vertical-align: middle;
     border-bottom: 2px solid #dee2e6; }
   .table tbody + tbody {
     border-top: 2px solid #dee2e6; }
