--- a/jysInfo/src/main/resources/static/css/universityView.css
+++ b/jysInfo/src/main/resources/static/css/universityView.css
@@ -756,12 +756,12 @@ progress {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1440px;
   }
-}
+} /*
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1320px;
   }
-}
+} */
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
