--- a/jysInfo/src/main/resources/static/css/universityView.css
+++ b/jysInfo/src/main/resources/static/css/universityView.css
@@ -112,6 +112,26 @@ body {
   background: #f5f5f5;
   font-family: 'Roboto', sans-serif;
 }
+
+.chart-area {
+  display: flex;
+}
+.chart-area > div {
+  width: 50%;
+}
+.chart-info {
+  padding:0 0 0 45px;
+}
+
+@media screen and (max-width: 1024.98px) {
+  .chart-area {
+    display: block;
+  }
+  .chart-area > div {
+    width: auto;
+  }
+}
+
 .table-responsive {
   margin: 30px 0;
 }
@@ -756,12 +776,12 @@ progress {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1440px;
   }
-} /*
+}
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1320px;
   }
-} */
+}
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
